# codex-transcripts

./: AGENTS.md  README.md  pyproject.toml
.github/: settings.yml
.github/workflows/: publish.yml  test.yml
src/codex_transcripts/: __init__.py
src/codex_transcripts/templates/: base.html  index.html  page.html
tests/: conftest.py  sample_session.jsonl  test_generate_html.py
